# engineering-doc-generator

./: .env.example  .gitignore  Dockerfile  pyproject.toml  render.yaml  requirements.txt
app/: config.py  main.py
app/generators/: acceptance_spec.py  base.py  common_bid.py  compliance_filter.py  quote_fill.py
app/llm/: batch_processor.py  client.py  prompts.py
app/models/: quote_data.py  requests.py  responses.py
app/parsing/: normalizer.py  ocr_parser.py  pdf_parser.py  table_extractor.py  text_extractor.py
app/services/: generation_service.py  packaging_service.py
app/static/: index.html
app/templates/: engine.py
app/utils/: chinese_utils.py  file_utils.py
docs/: index.html
scripts/: test_generate.py  test_parse.py
templates/default/: 共同標單範本.xlsx  填寫報價單內容範本.xlsx  工程規範符合性篩選表範本.xls  工程規範符合性篩選表範本.xlsx  驗收規範範本.docx
